添加windows-opengl的编译

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,11 +22,15 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        backend: [vulkan]
+        backend: [vulkan, opengl]
         include:
           - backend: vulkan
             artifact_name: zed-release
             rustflags: ""
+          - backend: opengl
+            artifact_name: zed-release-opengl
+            rustflags: "--cfg gles"
+      fail-fast: false
 
     steps:
       - name: Enable long paths in Git
@@ -224,7 +228,9 @@ jobs:
         run: |
           mkdir -p zed-release
           mv artifacts/zed-release/zed.exe zed-release/
-          zip -r zed-windows.zip zed-release/*
+          mv artifacts/zed-release-opengl/zed.exe zed-release/zed-opengl.exe
+          zip zed-windows.zip zed-release/zed.exe
+          zip zed-windows-opengl.zip zed-release/zed-opengl.exe
 
       - name: linux
         run: |
@@ -234,7 +240,7 @@ jobs:
           mv artifacts/zed-linux-arm64/zed-linux-arm64.tar.gz zed-linux-arm64.tar.gz
       - name: build sha256
         run: |
-          sha256sum zed-windows.zip zed-linux-x86_64.deb zed-linux-arm64.deb zed-linux-x86_64.tar.gz zed-linux-arm64.tar.gz > sha256sums.txt
+          sha256sum zed-windows.zip zed-windows-opengl.zip zed-linux-x86_64.deb zed-linux-arm64.deb zed-linux-x86_64.tar.gz zed-linux-arm64.tar.gz > sha256sums.txt
       - name: Upload release build artifacts to GitHub Release
         uses: softprops/action-gh-release@v2
         with:
@@ -244,6 +250,7 @@ jobs:
           make_latest: true
           files: |
             zed-windows.zip
+            zed-windows-opengl.zip
             zed-linux-x86_64.deb
             zed-linux-arm64.deb
             zed-linux-x86_64.tar.gz
